docs/tests/parser/edge_cases/valid/SwitchWithBreakAndContinue.src
fn void test() {
    while (true) {
        switch (x) {
            case 0 {
                continue;
            }
            case 1 {
                break;
            }
            default {
            }
        }
    }
}
