docs/tests/parser/edge_cases/invalid/NestedFunctionDef.src
fn void outer() {
    fn void inner() {
    }
}
